--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>Push to Git</title>
+<title>Push to GitHub</title>
 <body>
-	Push to Git
+	Push to GitHub
 </body>
 </head>
 </html>
